umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_indigo_test_026.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 31
bond_count: 32
sum_formula: C20N2O9
graph6: ^?A??A?WCoOQ?@?U??H?????????????_?????A??????????A???@_??@K???OQ????C???D_????G
