umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_indigo_test_029.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 24
bond_count: 25
sum_formula: C15N2O7
graph6: W??CBAOaO?_kG???????C???????A??@??@W??OO???_??k
