umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_indigo_test_036.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 41
bond_count: 43
sum_formula: C28N5O8
graph6: "h?_?CAo`??_S?@????????????A?i?????????O??@_??H_??OQ????_??D_???@?????????????????????????????????_??????@_??C??o??C??H??????G?????k??????C"
