umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_indigo_test_050.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 12
bond_count: 12
sum_formula: C8O4
graph6: K?A?C@_eKD?@
