umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_indigo_test_basic_smarts.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 37
bond_count: 44
sum_formula: C20H12FeN4+5
graph6: dhCGGCH?_?_@?@??_?G?@??C??G??G??cC?@G??K???_??P?AOG_???G????_????O????_????_????G????A?????G?????O?????_?????@??
