umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_isisdraw_D02028.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 63
bond_count: 67
sum_formula: C42H3N2O16
graph6: ~??~sPA@?_C?_@AA?A??g?A??G??C??C???o??O??C???K???_???O???A???@????G????_???@O????_????_????G????A?????C?????O?????G?????G?????A??????C??????W?????@??????@???????_??????O??????A???????C???????O???????O???????G???????C????????E????????_???????@?????????_????????O????????G_?????????A???????????_??????G??????????????????????????????
