umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_isisdraw_Morphine.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 21
bond_count: 25
sum_formula: C17NO3
graph6: Tq_XA?_?oCO??GA?a???W?O???g?@??A??G?
